# redock

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: redock.icns
src/: commands.rs  main.rs  utils.rs
