[package]
name = "redock"
version = "0.1.0"
authors = ["kkodokkushi@gmail.com"]
edition = "2024"

description = "Redis manager with GUI"
license = "MIT"
repository = "https://github.com/stillouyng/redock"
readme = "README.md"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "debug"] }
tokio = { version = "1.44.2", features = ["full"] }